* 2014-03-23 - thorben.betten@open-xchange.com

 - Fix for bug 31677: Properly do the thread-sort for subscribed POP3 accounts accessed via Unified Mail
 - Fix for bug 22930: Fixed SQL query to determine non-hierarchically-visible public folders

* 2014-03-21 - thorben.betten@open-xchange.com

 - Fix for bug 31366: Support configurable formats for logged login/logout events

* 2014-03-21 - tobias.friedrich@open-xchange.com

 - Fix for bug 31705: Always populate all field names during Portable serialization  

* 2014-03-21 - marcus.klein@open-xchange.com

 - Fix for bug 31707: Method did not list empty file stores due to wrong SQL statement. Corrected that SQL statement.

* 2014-03-20 - thorben.betten@open-xchange.com

 - Fix for bug 31657: Drop "webmail" capability for context administrator if "com.openexchange.mail.adminMailLoginEnabled" is set to "false"

* 2014-03-19 - jan.bauerdick@open-xchange.com

 - Fix for bug 31399: Don't suppress exception

* 2014-03-19 - ioannis.chouklis@open-xchange.com
 
 -  Fix for Bug 31637: [L3] Unclear usage of logconf '-u' and '-c' parameter

* 2014-03-19 - thorben.betten@open-xchange.com

 - Fix for bug 31644: Properly collect available text parts on reply if original message contains multipart/alternative appendix
 - Fix for bug 31470: Adjusted description of property "com.openexchange.mail.filter.useUTF7FolderEncoding" to also consider Cyrus IMAP
                      server setting "sieve_utf8fileinto"

* 2014-03-19 - tobias.friedrich@open-xchange.com

 - Fix for bug 31646: Be aware of unknown folder type 

* 2014-03-18 - thorben.betten@open-xchange.com

 - Fix for bug 31157: Keep trailing whitespace character in signature-delimiting line
 - Fix for bug 31629: Handle SMTP server that do not support authentication 

* 2014-03-18 - marcus.klein@open-xchange.com

 - Fix for bug 31599: Corrected RPM post installation script to not modify logback.xml anymore if log configuration migration has performed
   once.
