@@ -2,6 +2,7 @@
 
  - Fix for bug 31677: Properly do the thread-sort for subscribed POP3 accounts accessed via Unified Mail
  - Fix for bug 22930: Fixed SQL query to determine non-hierarchically-visible public folders
+ - Fix for bug 31714: Set upper limits for width/height parameter on image transformation request
 
 * 2014-03-21 - thorben.betten@open-xchange.com
 
